feat: update CORS configuration and refactor JWT secret key handling